# Gomoku-Engine

./: CMakeLists.txt  REFERENCES
include/: bot_player.h  game.h  game_constants.h  game_state.h  human_player.h  minimax_bot_player.h  player.h  random_bot_player.h  simple_bot_player.h
src/: bot_player.cpp  game.cpp  game_state.cpp  human_player.cpp  main.cpp  minimax_bot_player.cpp  random_bot_player.cpp
